--- a/2-thermo.tex
+++ b/2-thermo.tex
@@ -68,7 +68,7 @@ where $\epsilon$ is the depth of the well (minimal energy) and $\sigma$ is the d
 
 Usually in adsorption simulations of other gas molecules containing partial charges, we need to calculate the Coulomb interaction between the partial charges of the host framework and those of the adsorbate --- in periodic systems, the Ewald summation can be used. For noble gases, these ion--dipole and dipole--dipole interactions do not exist due to the perfect neutrality of the molecules. However, it is arguable that the ion--induced dipole is not taken into account in a simplified LJ potential. To complete the whole picture of the intermolecular interactions, the energy inducted by the surrounding framework atoms’ charges on the adsorbate would need to be added. Several approaches have been developed in the literature to improve the description of the intermolecular interactions by coupling the LJ potentials with an induction potential.\autocite{Lachet_1998,Becker_2017} 
 
-To wrap up this small section on the modelization of the intermolecular interactions in the adsorption simulations, I want to emphasize once more on the main modelization assumptions that could alter the accuracy of our method. First, the framework remains rigid during the whole simulation, which avoids the need for a molecular dynamics simulation of the framework to save time but also hides the effects of a known phenomenon.\autocite{Witman_2017} Second, the polarizability of the adsorbate is not fully taken into account since the interaction with the charges of the framework are not considered; the difference in polarizability between xenon and krypton can be further exploited to enhence the selectivity even more, experimental studies suggest the key role of polar groups and open metal sites.\autocite{Li_2019,Pei_2022,Perry_2014} And finally, the complex induction and dispersion interactions are described with a two-parameter model, which cannot capture all the subtlety of the differences between a same atom in different environments for instance; it could be possible to fine-tune these parameters in very specific cases, but the overall good performance \autocite{McDaniel_2015} of the UFF forcefield needed in a screening process can induce small errors when looking at specific cases.
+To wrap up this small section on the modelization of the intermolecular interactions in the adsorption simulations, I want to emphasize once more on the main modelization assumptions that could alter the accuracy of the method. First, the framework remains rigid during the whole simulation, which avoids the need for a molecular dynamics simulation of the framework to save time but also hides the effects of a known phenomenon.\autocite{Witman_2017} Second, the polarizability of the adsorbate is not fully taken into account since the interaction with the charges of the framework are not considered; the difference in polarizability between xenon and krypton can be further exploited to enhence the selectivity even more, experimental studies suggest the key role of polar groups and open metal sites.\autocite{Li_2019,Pei_2022,Perry_2014} And finally, the complex induction and dispersion interactions are described with a two-parameter model, which cannot capture all the subtlety of the differences between a same atom in different environments for instance; it could be possible to fine-tune these parameters in very specific cases, but the overall good performance \autocite{McDaniel_2015} of the UFF forcefield needed in a screening process can induce small errors when looking at specific cases.
 These assumptions have been made to find the right trade-off of the speed of computation versus a detailed description of the physical phenomena at stake. 
 
 
@@ -114,7 +114,7 @@ To characterize a separation process, I theoretically only need to perform a GCM
 
 \subsection{Infinite dilution adsorption: Widom insertion}\label{sct:widom}
 
-In 1963, the professor B. Widom introduced a simple method of calculation of thermodynamic properties in a material or fluid mixture.\autocite{Widom1963} Generally, this method allows accessing to the difference of internal energy before and after the insertion of a Widom test particle while fixing all other particles, therefore comparing the N-particle and (N+1)-particle states. This difference of energy $\Delta \Phi$ can then be used to deduce the excess free energy associated to it $\Delta F\e{exc} = -k\e{B} T \ln\left(\langle \exp(- \beta\Delta \Phi) \rangle\right)$, which corresponds to the excess chemical potential induced by the addition of a particle. In the domain of fluid phase equilibrium, Widom insertion is the most straightforward method to calculate a chemical potential value; however it has drawbacks in liquid-like phases because the insertable space is very narrow, and no relaxation is implemented to account for the reorganization of the surrounding particles.\autocite{Nezbeda_1991} In our case, I will only focus on the insertion from 0 to 1 particle, where no problems of overlapping between adsorbate particles can happen. Widom insertion is in our case only a random insertion of an adsorbate into an empty nanoporous framework. By randomly sampling the void space, a distribution of interaction energies $\mathcal{E}\e{int}$ can be obtained. And, the average of the Boltzmann weights associated is directly proportional to the adsorption free energy $\Delta G\e{ads}$ and the Henry adsorption constant $K\e{H}$. By taking the Boltzmann average of the interaction energies, it is also possible to compute the adsorption enthalpy $\Delta H\e{ads}$. All these quantities stay only valid at infinite dilution, for higher quantities of adsorbates the previously described GCMC technique should be used.  
+In 1963, the professor B. Widom introduced a simple method of calculation of thermodynamic properties in a material or fluid mixture.\autocite{Widom1963} Generally, this method allows accessing to the difference of internal energy before and after the insertion of a Widom test particle while fixing all other particles, therefore comparing the N-particle and (N+1)-particle states. This difference of energy $\Delta \Phi$ can then be used to deduce the excess free energy associated to it $\Delta F\e{exc} = -k\e{B} T \ln\left(\langle \exp(- \beta\Delta \Phi) \rangle\right)$, which corresponds to the excess chemical potential induced by the addition of a particle. In the domain of fluid phase equilibrium, Widom insertion is the most straightforward method to calculate a chemical potential value; however it has drawbacks in liquid-like phases because the insertable space is very narrow, and no relaxation is implemented to account for the reorganization of the surrounding particles.\autocite{Nezbeda_1991} In this thesis, I will only focus on the insertion from 0 to 1 particle, where no problems of overlapping between adsorbate particles can happen. Widom insertion is, in my case, only a random insertion of an adsorbate into an empty nanoporous framework. By randomly sampling the void space, a distribution of interaction energies $\mathcal{E}\e{int}$ can be obtained. And, the average of the Boltzmann weights associated is directly proportional to the adsorption free energy $\Delta G\e{ads}$ and the Henry adsorption constant $K\e{H}$. By taking the Boltzmann average of the interaction energies, it is also possible to compute the adsorption enthalpy $\Delta H\e{ads}$. All these quantities stay only valid at infinite dilution, for higher quantities of adsorbates the previously described GCMC technique should be used.  
 
 In the infinite dilution case, this test particle insertion technique is similar to a random sampling of the adsorbable space inside a material. If the sampling is thorough enough, it is possible to derive the following definitions of $\Delta G\e{ads}$ (equation~\ref{eq:ads_gibbs}), $K\e{H}$ (equation~\ref{eq:henry}) and $\Delta H\e{ads}$ (equation~\ref{eq:ads_enthalpy}) based on a complete sampling of the interaction energies $\mathcal{E}\e{int}$. 
 
@@ -687,7 +687,7 @@ The statistical correlation found between Henry's constant for Xe and Xe/Kr sele
 
 In order to use nanoporous materials to separate xenon from krypton, pressure swing adsorption (PSA) processes have been widely used: pressure is therefore a crucial thermodynamic variable in the separation cycle. Here, I studied the difference of selectivity between a system under very low pressure (at the zero loading limit, which is calculated at relatively low computational cost) and a system at ambient pressure (closer to working conditions, but obtained at higher simulation cost). I demonstrated that the selectivity could be highly dependent on the pressure, with high low-pressure selectivity that could be maintained in some materials at ambient-pressure selectivity, while in others there would be a large drop in selectivity: a high ambient-pressure selectivity requires high low-pressure selectivity, but the reverse does not hold.
 
-Using a thermodynamic approach to describe the separation selectivity, I showed that the differences in selectivity between the different pressures (and therefore different loading regimes of the frameworks) are mainly explained by the evolution of the adsorption enthalpies for Xe and Kr. By focusing on specific examples, I uncovered the microscopic origins of these selectivity changes, and related them to the relative roles of host--guest and guest--guest interactions. Population of different adsorption sites, or repacking of the adsorbed phase at higher loading, can lead to drastic changes in the overall selectivity. The mechanisms behind selectivity at high pressure are complex and unique to each framework, requiring a good understanding of the interactions between guest molecules constrained in the nanopores. Nevertheless, our classification of the interactions at play can help in the future to design more efficient high-throughput screening procedures.
+Using a thermodynamic approach to describe the separation selectivity, I showed that the differences in selectivity between the different pressures (and therefore different loading regimes of the frameworks) are mainly explained by the evolution of the adsorption enthalpies for Xe and Kr. By focusing on specific examples, I uncovered the microscopic origins of these selectivity changes, and related them to the relative roles of host--guest and guest--guest interactions. Population of different adsorption sites, or repacking of the adsorbed phase at higher loading, can lead to drastic changes in the overall selectivity. The mechanisms behind selectivity at high pressure are complex and unique to each framework, requiring a good understanding of the interactions between guest molecules constrained in the nanopores. Nevertheless, this classification of the interactions at play can help in the future to design more efficient high-throughput screening procedures.
 
 For instance, the essentially enthalpic nature of the xenon/krypton separation process supports the need for more efficient ways of sampling the interaction energies and using them as cheap descriptors to tackle more and more numerous structures. In the next chapter, I will go over different ways of evaluating the adsorption enthalpy by comparing the computation time required and the accuracies of each method. Finally, the influence of the partial pressure through the change in composition or in pressure questions the possible use of infinite dilution thermodynamic quantities to predict the selectivity at any pressure (GCMC). Many studies have focused on predicting the results of GCMC simulations;\autocite{Simon_2015,Shi_2023,Kang_2023,Li_2023} by using a thermodynamic-based approach combined with a characterization of the pore diversity, I will try to achieve better results in predicting GCMC values of selectivity.
 
